# zoitechat-windows

./: changelog.rst  meson.build  meson_options.txt
.github/workflows/: appimage-build.yml  flatpak-build.yml  manjaro-package-build.yml  windows-build.yml
data/: zoitechat.gresource.xml
data/misc/: meson.build  net.zoite.Zoitechat.appdata.xml.in  net.zoite.Zoitechat.desktop.in.in
flatpak/: net.zoite.Zoitechat.json  python3-cffi.json
packaging/manjaro/: PKGBUILD
plugins/fishlim/: meson.build
plugins/perl/: meson.build  perl.c
plugins/python/: python.py
plugins/sysinfo/: meson.build
src/: meson.build
src/common/: cfgfiles.c  common.vcxproj  common.vcxproj.filters  fe.h  gtk3-theme-service.c  gtk3-theme-service.h  meson.build  outbound.c  server.c  text.c  userlist.c  zoitechat.c  zoitechat.h
src/common/tests/: test-gtk3-theme-service.c
src/fe-gtk/: banlist.c  chanlist.c  chanview-tabs.c  chanview-tree.c  chanview.c  dccgui.c  editlist.c  fe-gtk.c  fe-gtk.vcxproj  fe-gtk.vcxproj.filters  fkeys.c  gtkutil.c  icon-resolver.c  icon-resolver.h  ignoregui.c  joind.c  maingui.c  menu.c  meson.build  notifygui.c  pixmaps.c  plugin-tray.c  plugingui.c  rawlog.c  servlistgui.c  setup.c  sexy-spell-entry.c  textgui.c  userlistgui.c  xtext.c  xtext.h
src/fe-gtk/theme/: theme-access.c  theme-access.h  theme-application.c  theme-css.c  theme-gtk3.c  theme-gtk3.h  theme-manager.c  theme-manager.h  theme-preferences.c  theme-preferences.h  theme-runtime.c  theme-runtime.h
src/fe-gtk/theme/tests/: test-theme-access-routing.c  test-theme-gtk3-settings.c  test-theme-gtk3-stub.c  test-theme-manager-auto-refresh.c  test-theme-manager-dispatch-routing.c  test-theme-manager-policy.c  test-theme-preferences-gtk3-populate.c  test-theme-runtime-persistence.c
src/fe-text/: fe-text.c
src/fe-win32/: FRONTEND_CHECKLIST.md  fe-win32-completeness.c  fe-win32.c  fe-win32.vcxproj  fe-win32.vcxproj.filters  meson.build  notification-win32.c  notification-win32.h
win32/: native-ui-dependencies.md  version.txt  zoitechat.props
win32/copy/: copy.vcxproj
win32/installer/: zoitechat.iss.tt
